# fractals-morpher

./: CMakeLists.txt  README.md
apps/: App.cpp
include/: Animation.h  Animation.hpp  App.hpp  Canvas.hpp  ColorGenerator.hpp  ColoredPoint.hpp  FileHandler.hpp  Fractal.hpp  InputPanel.hpp  MainFrame.hpp  MainPanel.hpp  MenuPanel.hpp  TransformParams.h  config.hpp  design.hpp
src/: Animation.cpp  Canvas.cpp  ColorGenerator.cpp  ColoredPoint.cpp  FileHandler.cpp  Fractal.cpp  InputPanel.cpp  MainFrame.cpp  MainPanel.cpp  MenuPanel.cpp
